# skeleton-autotools

./: .gitignore  Autotools.toml  Justfile  LICENSE  README.md  configure.ac  main.c
